Remove hard-coding of 2 Players en-masse from MixxxApp. Removed tons of MixxxView-related signal connections from MixxxApp and put them back into MixxxView, closer to where they make sense.
* Added a PlayerManager class that is in charge of instantiating and holding players.
* Moved creation/deletion/connection of AnalyserQueue inside of PlayerManager
* Make MixxxApp create 2 players via PlayerManager. To give an idea of how little MixxxApp cares about Players, it doesn't even need the pointers to the individual players. 
* Removed m_pPlayer1/m_pPlayer2 storage from MixxxApp and MixxxView.
* Change waveform trackDropped(location) signals to trackDropped(location,group) signals so that they can be connectd directly to PlayerManager::loadToPlayer(..) instead of having to be connected to some stub in MixxxApp.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -459,6 +459,7 @@ sources = Split("""
 
                 trackinfoobject.cpp
                 player.cpp
+                playermanager.cpp
                 sounddevice.cpp
                 soundmanager.cpp
                 sounddeviceportaudio.cpp
