Add an EngineWorker framework for allowing EngineChannels to provide runnable's to be run when the audio callback is done. Convert CachingReader to be run via this framework to consolidate the readers into one thread and help ensure that they do not run while the callback is active.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -290,6 +290,8 @@ sources = Split("""
                 dlgprepare.cpp
                 dlgautodj.cpp
 
+                engine/engineworker.cpp
+                engine/engineworkerscheduler.cpp
                 engine/enginebuffer.cpp
                 engine/enginebufferscale.cpp
 		engine/enginebufferscaledummy.cpp
