Replacing QLinkedList by QList for performance awesomeness. Drafted the EffectsUnitsBackend class.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -1003,6 +1003,7 @@ if int(flags_fxunits):
 			effectsunits/effectsunitscontroller.cpp 
 			effectsunits/effectsunitsplugin.cpp 
 			effectsunits/effectsunitsbackend.cpp 
+			effectsunits/debugbackend.cpp 
 			""")
 	print "FXUnits support... enabled"
 	build_flags += 'fxunits '
