Remove beatloop, temporalShape* controls from standard keyboard mapping. Move beatloop to q and u. Add hotcue 1-4 key mappings for channel 1 and channel2. Still needs looping keymappings.

--- a/mixxx/res/keyboard/Standard.kbd.cfg
+++ b/mixxx/res/keyboard/Standard.kbd.cfg
@@ -4,7 +4,7 @@ crossfader_down g
 
 [Channel1]
 play d
-cue_default e 
+cue_default e
 cue_gotoandstop shift+e
 cue_set shift+d
 back a
@@ -23,12 +23,15 @@ filterLowKill 5
 filterMidKill 4
 filterHighKill 3
 flanger 2
-bpm z
-temporalShape_up q
-temporalShape_down w
-temporalPhase_up Shift+q
-temporalPhase_down Shift+w
-beatloop v
+bpm q
+hotcue_1_activate z
+hotcue_2_activate x
+hotcue_3_activate c
+hotcue_4_activate v
+hotcue_1_clear Shift+z
+hotcue_2_clear Shift+x
+hotcue_3_clear Shift+c
+hotcue_4_clear Shift+v
 
 [Channel2]
 play l
@@ -51,9 +54,12 @@ filterLowKill 6
 filterMidKill 7
 filterHighKill 8
 flanger 9
-bpm n
-temporalShape_up u
-temporalShape_down i
-temporalPhase_up Shift+u
-temporalPhase_down Shift+i
-beatloop b
+bpm u
+hotcue_1_activate m
+hotcue_2_activate ,
+hotcue_3_activate .
+hotcue_4_activate /
+hotcue_1_clear Shift+M
+hotcue_2_clear Shift+<
+hotcue_3_clear Shift+>
+hotcue_4_clear Shift+?
