Changed to have SamplerManager and Sampler class.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -463,6 +463,8 @@ sources = Split("""
                 trackinfoobject.cpp
                 player.cpp
                 playermanager.cpp
+				sampler.cpp
+				samplermanager.cpp
                 sounddevice.cpp
                 soundmanager.cpp
                 sounddeviceportaudio.cpp
