Added audiosource.cpp to SConscript source file list. Fixed some compilation and linking errors I didn't get to notice until now. Added empty constructors to the audiopath.h classes for an ugly hack,     I hope to, one day, remove them (and the hack). Fixed a compilation bug I missed until now in EngineMaster. Fixed some warnings and the return value of SoundManager::requestBuffer     in SoundDevicePortAudio. Finished modification of SoundManager to use new AudioPath interface. Changed return value of SoundManager::pushBuffer, as suggested in a comment.     (From a pointer type that was being used to return NULL to void) This branch now compiles! Sound plays correctly, will check with others     about vinyl control as I don't currently have an audio interface with     a 2-channel input. All that needs done now is the preferences UI.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -468,6 +468,7 @@ sources = Split("""
                 playerinfo.cpp
 
                 segmentation.cpp
+                audiopath.cpp
                 """)
 
 #Set up the library path on Windows:
