Progress with DEBUGBackend

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -972,6 +972,7 @@ if int(flags_fxunits):
 			effectsunits/effectsunitscontroller.cpp 
 			effectsunits/effectsunitsplugin.cpp 
 			effectsunits/effectsunitsbackend.cpp 
+			effectsunits/ladspabackend.cpp 
 			effectsunits/debugbackend.cpp 
 			""")
 	print "FXUnits support... enabled"
