Removed overly-complicated AudioPathModel. Removed AudioPathDialog and replaced it was DlgPrefNewSoundItem. Worked on new sound prefs pane, it's now largely working for read-only     functions (can see soundcards, change audio API, but can't change     devices stuff with soundmanager and can't load/save changes to disk).

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -290,8 +290,7 @@ sources = Split("""
                 dlgtrackinfo.cpp
                 dlgprepare.cpp
                 dlgautodj.cpp
-                dlgaudiopath.cpp
-                audiopathmodel.cpp
+                dlgprefnewsounditem.cpp
 
                 engine/engineworker.cpp
                 engine/engineworkerscheduler.cpp
@@ -788,7 +787,7 @@ env.Uic4('dlgmidilearning.ui')
 env.Uic4('dlgtrackinfo.ui')
 env.Uic4('dlgprepare.ui')
 env.Uic4('dlgautodj.ui')
-env.Uic4('dlgaudiopathdlg.ui')
+env.Uic4('dlgprefnewsounditem.ui')
 
 #Add the QRC file which compiles in some extra resources (prefs icons, etc.)
 env.Qrc('#res/mixxx.qrc')
