Added SoundManagerConfig and begun implementation, class will keep track of     the sound backend's configuration (api, sample rate, latency, paths, etc.) Changed SoundManager's sample rate list to be made up of uints instead of     QStrings, as it makes it much easier to interface with in other code (for     instance, SoundManagerConfig ;), but also the prefs). Updated prefs     accordingly.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -471,6 +471,7 @@ sources = Split("""
 
                 segmentation.cpp
                 audiopath.cpp
+                soundmanagerconfig.cpp
                 """)
 
 #Set up the library path on Windows:
